# AppCenter

./: Cargo.toml  build.rs  shortcuts.json
src/: main.rs  shortcuts.rs  ui.slint  uui.slint
