[package]
name = "Launcher"
version = "0.1.0"
edition = "2021"
build="build.rs"

[dependencies]
dirs = "6.0.0"
serde = { version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
slint = { version="1.12.1", features = ["std", "backend-winit"] }
winit = "0.27"


[build-dependencies]
slint-build="1.12.1"
